# tok

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.  FQA.md  Justfile  Messages.sh  README.md  Tok.qbs  architecture.md  build.nix  default.nix  design-guidelines.md  devshell.toml  flake.nix  pressing-todo.md
.reuse/: dep5
app data/: Appdata.qbs  org.kde.Tok.desktop  org.kde.Tok.notifyrc
data/: Content.qml  main.qml  main.qrc  maui_main.qml
data/components/: AudioPlayer.qml  ContactsPicker.qml  CreateNewMenu.qml  CreateNewMenuInWindow.qml  EditMenu.qml  EditMenuInWindow.qml  FormatMenu.qml  FormatMenuInWindow.qml  Generate In-Window Variants Of The Labs Menu Files  GlobalMenu.qml  GlobalMenuInWindow.qml  Header.qml  HopToEdge.qml  ImagePopup.qml  LoaderPlus.qml  LoaderSwitch.qml  PlaintextMessage.qml  ResponsiveMenu.qml  ResponsiveMenuItem.qml  SearchField.qml  Sheet.qml  UserDataSheet.qml  qmldir
data/components/upload/: RichTextArea.qml
data/components/upload/desktop/: UploadDialog.qml
data/components/upload/mobile/: UploadDialog.qml
data/routes/: Chats.qml
data/routes/chats components/: QuickView.qml
data/routes/entry/: AuthenticationCode.qml  Password.qml  PhoneNumber.qml  Welcome.qml
data/routes/messages/: NoView.qml  Sidebar.qml  View.qml
data/routes/messages/components/: AudioMessage.qml  CompositionBar.qml  FileMessage.qml  GroupInformation.qml  InlineKeyboard.qml  MediaListView.qml  MediaView.qml  MentionBar.qml  MessageBackground.qml  MessageDelegate.qml  MusicView.qml  PhotoMessage.qml  PhotosView.qml  PinnedMessages.qml  ReplyBlock.qml  SearchMessages.qml  Sticker.qml  TextMessage.qml  Unsupported.qml  UserAddMessage.qml  VideoMessage.qml  VideosView.qml  WebPageBlock.qml  link_activation.mjs
data/routes/messages/components/normal/: AudioMessage.qml  FileMessage.qml  GifMessage.qml  LocationMessage.qml  MessageBackground.qml  PhotoMessage.qml  ReplyBlock.qml  Sticker.qml  TextMessage.qml  UserAddMessage.qml  VenueMessage.qml  VideoMessage.qml  VoiceChatFinished.qml  VoiceChatStarted.qml
data/routes/messages/components/shared/: ReplyBlock.qml  WebPageBlock.qml
data/routes/messages/components/thin/: AudioMessage.qml  FileMessage.qml  GifMessage.qml  PhotoMessage.qml  TextMessage.qml  UserAddMessage.qml  VideoMessage.qml  VoiceChatFinished.qml  VoiceChatStarted.qml
data/routes/settings/: AccountSettings.qml  AppearanceSettings.qml  BehaviourSettings.qml  ProxyForm.qml  ProxySettings.qml  Settings.qml  SidebarItem.qml  SpellcheckDictionary.qml  SpellcheckSettings.qml
data/routes/settings/mobile/: AppearanceSettings.qml  ColorSchemes.qml  NewProxy.qml  ProxySettings.qml  Settings.qml  SpellcheckDefault.qml  SpellcheckDictionary.qml  SpellcheckLanguageList.qml  SpellcheckSettings.qml
data/test/: tst_main.qml
flatpak/: org.kde.Tok.yml
src/: Shared.qbs  Test.qbs  Tok.qbs  album_art_extractinator.cpp  album_art_extractinator.h  backgrounds_model.cpp  backgrounds_model.h  backgrounds_model_p.h  chatlistmodel.cpp  chatlistmodel.h  chatlistmodel_p.h  chatsmodel.cpp  chatsmodel.h  chatsmodel_p.h  chatsort.cpp  chatsort.h  chatsstore+setstatus.cpp  chatsstore.cpp  chatsstore.h  chatsstore_p.h  chatstore+actions.cpp  client.cpp  client.h  client_p.cpp  client_p.h  client_searchmessagesmodelfactory.cpp  colorschemer.cpp  colorschemer.h  contactsmodel.cpp  contactsmodel.h  contactsmodel_p.h  copyinterceptor.cpp  copyinterceptor.h  copyinterceptor_p.h  defs.cpp  defs.h  emojiutilities.cpp  extract_flags.sh  extractinator.cpp  extractinator.h  (+61 more)
src/internallib/: README.md  qabstractrelationalmodel.cpp  qabstractrelationalmodel.h  qquickrelationallistener.cpp  qquickrelationallistener.h  qquickrelationallistener_p.h
src/the rlottie plugin/: rlottie.json  rlottie.qbs  rlottieimage.cpp  rlottieimage.h  rlottieplugin.cpp  rlottieplugin.h
src/yoinked from qt automotive/: qivipendingreply.cpp  qivipendingreply.h  qivipendingreply_p.h  qiviqmlconversion_helper.cpp  qiviqmlconversion_helper.h
